--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ section {
 
 #home {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(/image/hero1.jpg);
+    url('image/hero1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
