--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ h6 {
 
 #contact {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("/image/contbg.jpg");
+    url("image/contbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
